--- a/concluidos.html
+++ b/concluidos.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav>
-        <!--a href="envio.html">Cadastro de Documentos</a--> |
+        <a href="envio.html">Cadastro de Documentos</a> |
         <a href="recebimento.html">Recebimento de Documentos</a> |
         <a href="concluidos.html">Documentos Concluídos</a>
         <a href="#" id="imprimirConcluidos">Imprimir Concluídos</a>
