--- a/recebimento.html
+++ b/recebimento.html
@@ -30,6 +30,7 @@
                     <th>Setor de Origem</th>
                     <th>Setor de Destino</th>
                     <th>Status</th>
+                    <th>Arquivo</th>
                     <th>Ações</th>
                 </tr>
             </thead>
