--- a/recebimento.html
+++ b/recebimento.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recebimento de Documentos</title>
     <link rel="stylesheet" href="styles.css">
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.6.0/jspdf.umd.min.js"></script>
     <script src="recebimento.js" defer></script>
 </head>
 
 <body>
     <nav>
-        <a href="index.html">Cadastro de Documentos</a> |
-       
+        <a href="envio.html">Cadastro de Documentos</a>
         <a href="concluidos.html">Documentos Concluídos</a>
         <a href="#" id="imprimirRecebimento">Imprimir Recebimento</a>
-      
+        <a href="#" id="logout" class="logout-btn">Sair do Sistema</a>
     </nav>
 
     <div class="container">
@@ -39,7 +40,14 @@
             </tbody>
         </table>
 
-
+    </div>
+    <div>
+        <footer>
+            <div class="footer-content">
+                <span>&copy; 2024 - I-infotec - Desenvolvimentos de Softwares</span>
+                <!-- Adicione mais links ou informações aqui -->
+            </div>
+        </footer>
     </div>
 </body>
 
