--- a/concluidos.html
+++ b/concluidos.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documentos Concluídos</title>
     <link rel="stylesheet" href="styles.css">
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.6.0/jspdf.umd.min.js"></script>
     <script src="concluidos.js" defer></script>
 </head>
 
 <body>
     <nav>
-        <a href="index.html">Cadastro de Documentos</a> |
-        <a href="recebimento.html">Recebimento de Documentos</a> |
+
+        <a href="envio.html">Cadastro de Documentos</a>
+        <a href="recebimento.html">Recebimento de Documentos</a>
         <a href="#" id="imprimirConcluidos">Imprimir Concluídos</a>
         <a href="#" id="limparConcluidos">Limpar Concluídos</a>
+        <a href="#" id="logout" class="logout-btn">Sair do Sistema</a>
 
     </nav>
 
@@ -37,7 +41,14 @@
             </tbody>
         </table>
 
-
+    </div>
+    <div>
+        <footer>
+            <div class="footer-content">
+                <span>&copy; 2024 - I-infotec - Desenvolvimentos de Softwares</span>
+                <!-- Adicione mais links ou informações aqui -->
+            </div>
+        </footer>
     </div>
 </body>
 
