--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
         // Verifica se as credenciais estão corretas
         if (username === validUsername && password === validPassword) {
             // Redireciona para a página principal
-            window.location.href = 'envio.html';
+            window.location.href = 'index.html';
         } else {
             // Exibe uma mensagem de erro
             alert('Usuário ou senha incorretos!');
