--- a/concluidos.html
+++ b/concluidos.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
 
-        <a href="envio.html">Cadastro de Documentos</a>
+        <a href="index.html">Cadastro de Documentos</a>
         <a href="recebimento.html">Recebimento de Documentos</a>
         <a href="#" id="imprimirConcluidos">Imprimir Concluídos</a>
         <a href="#" id="limparConcluidos">Limpar Concluídos</a>
