--- a/recebimento.html
+++ b/recebimento.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav>
-        <a href="envio.html">Cadastro de Documentos</a>
+        <a href="index.html">Cadastro de Documentos</a>
         <a href="concluidos.html">Documentos Concluídos</a>
         <a href="#" id="imprimirRecebimento">Imprimir Recebimento</a>
         <a href="#" id="logout" class="logout-btn">Sair do Sistema</a>
