--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
     <div class="container">
-        <img src="logo_poco.png" alt="Descrição da Imagem" style="max-width: 200px; height: auto;">
+        <img src="logo_poco.png" alt="Descrição da Imagem" style="max-width: 170px; height: auto;">
         <h1>Secretaria Municipal de Recursos Humanos</h1>
 
         <form id="form-protocolo">
@@ -51,13 +51,13 @@
                         <label for="setorOrigem">Setor de Origem:</label>
                         <select id="setorOrigem" required>
                             <option value="RH">RH</option>
-                            <option value="Juridico">Jurídico</option>
+                            <option value="Juridico">JURÍDICO</option>
                         </select>
 
                         <label for="setorDestino">Setor de Destino:</label>
                         <select id="setorDestino" required>
                             <option value="RH">RH</option>
-                            <option value="Juridico">Jurídico</option>
+                            <option value="Juridico">JURÍDICO</option>
                         </select>
 
 
